<resources>
    <string name="app_name">Simply contacts</string>
    <string name="toolbar_name">Agenda</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="contacts">Contacts</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="title_notifications">Notifications</string>
    <string name="icon_for_the_type_of_call_made" translatable="false">Icon for the type of call made</string>
    <string name="call_time">%1$s min</string>
    <string name="call_time_in_seconds">%1$s sec</string>
    <string name="read_contacts_permission">We need the permission to your Agenda in order to display the contacts list.</string>
    <string name="how_to_grant_permission">Please click on the button below or enable this from your settings</string>
    <string name="grant_permission_button_text">Grant Permission</string>
    <string name="read_recent_calls_permission">The app needs to be the default phone handler to in order to show the call log.</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="new_name">New name</string>
    <string name="update_contact">Update contact</string>
    <string name="add_person">add person</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="enter_the_name_here">Enter the NAME here</string>
    <string name="enter_the_number_here">Enter the NUMBER here</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
    <string name="no">No</string>
    <string name="yes">YES</string>
    <string name="language">Language</string>
    <string name="done">Done</string>
    <string name="person_added_toast">%1$s added!</string>
    <string name="error_occured_deletion">An error occurred during deletion!</string>
    <string name="person_deleted">%1$s deleted!</string>
    <string name="call_button" translatable="false">Call button</string>
    <string name="messaging_button" translatable="false">Messaging button</string>
    <string name="delete_button" translatable="false">Delete button</string>
    <string name="list_of_contacts" translatable="false">List of contacts</string>
    <string name="enter_name_error">Please enter a name</string>
    <string name="enter_number_error">Please enter a number</string>
    <string name="number_updated">Number updated</string>
    <string name="name_updated">Name updated</string>
    <string name="favorites_text">Favorites</string>

</resources>