<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recentCalls.RecentCallsFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/recent_calls_list_image"
            android:layout_marginBottom="5dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/read_recent_calls_permission"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/how_to_grant_permission"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/grant_permissions_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/round_button"
            android:text="@string/grant_permission_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/agenda_recycler_view"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</androidx.constraintlayout.widget.ConstraintLayout>