<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_button"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/confirmation_delete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hei Deni.                             Ce mai faci? :))" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_delete_text">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_delete_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_red_button"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/no_button"
            app:layout_constraintTop_toBottomOf="@id/confirmation_delete_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>